--- a/index.html
+++ b/index.html
@@ -4,65 +4,74 @@
   	<title>index.html</title>
   	<meta charset="utf-8">
   	<meta charset="lang=en.us">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-   <!-- CSS -->
-<!--    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
--->   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Bootstrap and CSS-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css"> 	
 
-<link rel="stylesheet" type="text/css" href="assets/css/style.css"> 	
+    <!-- Javascript -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="assets/js/main.js"></script>
 
-<!-- Javascript -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="assets/js/main.js"></script>
+  </head>
 
-</head>
+  <body>
+    <div class="jumbotron banner">
+      <div id='container'>
+        <h1>Rock 'n Roll Hangman</h1>
+        <p>Where bands go to die</p>
+        <!--   <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p> -->
+      </div>
+      <div class = "row">
+        <div class="col-sm-2"></div>
 
-<body>
-  <div class="jumbotron banner">
-    <div id='container'>
-      <h1>Rock 'n Roll Hangman</h1>
-      <p>Where bands go to die</p>
-    <!--   <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p> -->
-    </div>
-    <div class = "row">
-      <div class="col-sm-2"></div>
-      <div class='col-sm-6'>
-              <div id = "Line0"></div>      
-              <div id="displayStage"></div>
-              <div id="maxAttempts"></div>
-              <div id="message"></div>
+        <!-- left side of screen -->
+        <div class='col-sm-3'>
 
+          <!-- hangman display -->
+          <div id = "deadMan"></div>
 
+          <!-- game answer placeholder -->
+          <div id="displayStage"></div>
 
+          <div class="panel panel-danger">
+              <div id = "maxAttempts" class="panel-body"></div>
+          </div>
 
+          <div class="panel panel-default">
+              <div id = "message" class="panel-body"></div>
+          </div>
+
+        </div>
+
+        <div class="col-sm-3"></div>
+
+        <!-- right side of screen -->
+        <div class="col-sm-3">
+
+        <!-- Hint Panel -->
+         <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title panel-alert">Guess the musical artist</h3>
+          </div>
+          <div id="hintBox" class="panel-body">
+            Panel content
+          </div>
+        </div>
+
+        <!-- letters Used -->
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title panel-alert">Letter's Used</h3>
+          </div>
+          <div id="charsUsed" class="panel-body"></div>
+        </div>
 
       </div>
-      <div class="col-sm-3">
 
-   <div class="panel panel-primary">
-      <div class="panel-heading">
-        <h3 class="panel-title panel-alert">Guess the musical artist</h3>
-      </div>
-      <div id="hintBox" class="panel-body">
-        Panel content
-      </div>
-    </div>
-
-   <div class="panel panel-primary">
-      <div class="panel-heading">
-        <h3 class="panel-title panel-alert">Letter's Used</h3>
-      </div>
-      <div id="charsUsed" class="panel-body"></div>
-    </div>
-
-
-    </div>
-
-
-    
-  </div>	
-</body>
+    </div>	
+  </body>
 
 </head>
